--- a/WF/.project
+++ b/WF/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ModuloFinanceiro</name>
+	<name>jsf-blank</name>
 	<comment></comment>
 	<projects>
 	</projects>
