--- a/FinancialControl/.project
+++ b/FinancialControl/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WF</name>
+	<name>FinacialControl</name>
 	<comment></comment>
 	<projects>
 	</projects>
