--- a/FinancialControl/WebContent/WEB-INF/web.xml
+++ b/FinancialControl/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-  <display-name>WF</display-name>
+  <display-name>FinacialControl</display-name>
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -58,7 +58,7 @@
   <listener>
     <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
   </listener>
-    <welcome-file-list>
+  <welcome-file-list>
     <welcome-file>faces/index.jsp</welcome-file>
     <welcome-file>faces/index.html</welcome-file>
   </welcome-file-list>
