--- a/FinancialControl/.classpath
+++ b/FinancialControl/.classpath
@@ -44,5 +44,13 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.6.4.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-log4j12-1.6.4.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/swarmcache-1.0RC2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-beanutils-1.8.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-collections-3.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-digester-1.8.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/myfaces-api-2.1.7.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/myfaces-bundle-2.1.7.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/myfaces-impl-2.1.7.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
